--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Springdemo
 spring.thymeleaf.cache=false
-server.port=8090
-welcome.message : From Aviz
+server.port=9090
+welcome.message : From Vijay
 server.servlet.context-path=/springdemo
